Change name of .ogg audio file to remove capitalisation and ensure cross-platform compatibility

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             </div>
             <!--below column disappears at screens below 768px, making image disappear-->
             <div class="column-2">
-                <audio class="audio" src="audio/Bob_Minor.ogg" controls muted>A synthesised audio of the method Plain Bob</audio>
+                <audio class="audio" src="audio/bob_minor.ogg" controls muted>A synthesised audio of the method Plain Bob</audio>
                 <span class="audio_label">the method Plain Bob Minor</span> <!-- This was originally added as a 'label' element, but changed to 'span' after running into an issue with this on the HTML validator -->
                 <img src="assets/images/bell_casting_r.jpg" class="about_image" alt="a bell being cast">
             </div>
